Fixes several issues reported by sonarcloud.